// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cdn routes > public asset outputs > generates correct CSS output 1`] = `
{
  "body": "@font-face {
  font-family: 'Abel';
  font-style: normal;
  font-display: swap;
  font-weight: 400;
  src: url('https://cdn.jsdelivr.net/fontsource/fonts/abel@5.0.0/latin-400-normal.woff2') format(woff2), url('https://cdn.jsdelivr.net/fontsource/fonts/abel@5.0.0/latin-400-normal.woff') format(woff);
  unicode-range: U+0000-00FF;
}",
  "headers": {
    "cacheControl": "public, max-age=86400, stale-while-revalidate=604800",
    "cdnCacheControl": "public, max-age=86400, stale-while-revalidate=604800",
    "contentType": "text/css; charset=utf-8",
    "edgeCacheControl": "public, max-age=900, stale-if-error=604800",
    "etag": "<etag>",
    "lastModified": "<last-modified>",
  },
  "status": 200,
}
`;

exports[`cdn routes > public asset outputs > generates variable CSS output 1`] = `
"@font-face {
  font-family: 'Recursive Variable';
  font-style: normal;
  font-display: swap;
  font-weight: 400;
  src: url('https://cdn.jsdelivr.net/fontsource/fonts/recursive:vf@5.0.0/latin-mono-normal.woff2') format('woff2-variations');
  unicode-range: U+0000-00FF;
}"
`;

exports[`cdn routes > public asset outputs > serves minified CSS aliases 1`] = `"@font-face{font-family:'Family Pack';font-style:normal;font-display:swap;font-weight:400;src:url('https://cdn.jsdelivr.net/fontsource/fonts/familypack@5.0.0/latin-400-normal.woff2') format(woff2),url('https://cdn.jsdelivr.net/fontsource/fonts/familypack@5.0.0/latin-400-normal.woff') format(woff);unicode-range:U+0000-00FF;}@font-face{font-family:'Family Pack';font-style:normal;font-display:swap;font-weight:700;src:url('https://cdn.jsdelivr.net/fontsource/fonts/familypack@5.0.0/latin-700-normal.woff2') format(woff2),url('https://cdn.jsdelivr.net/fontsource/fonts/familypack@5.0.0/latin-700-normal.woff') format(woff);unicode-range:U+0000-00FF;}"`;

exports[`cdn routes > reports a failed asynchronous download build 1`] = `
{
  "body": {
    "error": "Artifact build failed",
    "status": 502,
  },
  "headers": {
    "cacheControl": "no-store",
    "cdnCacheControl": "no-store",
    "contentType": "application/json",
    "edgeCacheControl": "no-store",
  },
  "status": 502,
}
`;

exports[`cdn routes > returns 502 when the artifact builder fails 1`] = `
{
  "body": {
    "error": "Artifact build failed",
    "status": 502,
  },
  "headers": {
    "cacheControl": "no-store",
    "cdnCacheControl": "no-store",
    "contentType": "application/json",
    "edgeCacheControl": "no-store",
  },
  "status": 502,
}
`;

exports[`cdn routes > returns 502 when version lookup upstream fails 1`] = `
{
  "body": {
    "error": "Bad Gateway. Failed to fetch https://data.jsdelivr.com/v1/packages/npm/@fontsource/recursive: 500",
    "status": 502,
  },
  "headers": {
    "cacheControl": "no-store",
    "cdnCacheControl": "no-store",
    "contentType": "application/json",
    "edgeCacheControl": "no-store",
  },
  "status": 502,
}
`;
